[gd_scene load_steps=2 format=3 uid="uid://cd2ii4i7w0jnx"]

[ext_resource type="Script" path="res://scripts/Task9_ControlDiffusion.gd" id="1_task9"]

[node name="Task9_ControlDiffusion" type="Node2D"]
script = ExtResource("1_task9")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 200.0

[node name="LabelInstructions" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Control the Diffusion Field"
theme_override_font_sizes/font_size = 16

[node name="LabelTimer" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Time: 8"

[node name="LabelStatus" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Diffusion: 0.50"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="DecreaseButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Decrease -"

[node name="IncreaseButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Increase +"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/DecreaseButton" to="." method="adjust_diffusion" binds= [-0.05]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/IncreaseButton" to="." method="adjust_diffusion" binds= [0.05]]
